<resources>
    <string name="app_name">HealthCare</string>
    <string name="empty_fields_message">Vui lòng điền toàn bộ thông tin.</string>
    <string name="password_mismatch_message">Mật khẩu và Nhập lại mật khẩu không trùng khớp.</string>
    <string name="invalid_password_message">Mật khẩu phải có ít nhất 8 ký tự, có số, chữ và ký tự đặc biệt.</string>
    <string name="registration_success_message">Thông tin đăng ký đã được lưu.</string>
    <string name="app_name2">SỨC KHỎE 24/7</string>
    <string name="username_email">Tên đăng nhập/Email</string>
    <string name="username_reg">Tên đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="username_already_used_message">Tên người dùng này đã được sử dụng.</string>
    <string name="username_check_error_message">Không thể kiểm tra tên người dùng.</string>
    <string name="email_already_used_message">Email này đã được sử dụng.</string>
    <string name="weak_password_message">Mật khẩu quá yếu.</string>
    <string name="invalid_email_message">Email không hợp lệ.</string>
    <string name="registration_failure_message">Đăng ký thất bại.</string>
    <string name="login_success">Đăng nhập thành công.</string>
    <string name="login_failure">Đăng nhập thất bại.</string>
    <string name="username_not_exist">Tên đăng nhập không tồn tại</string>
    <string name="welcomeback">Chào mừng trở lại</string>
    <string name="back">QUAY VỀ</string>
    <string name="topdoctors">Những bác sĩ hàng đầu</string>
    <string name="family_physicians">BÁC SĨ GIA ĐÌNH</string>
    <string name="dietician">CHUYÊN GIA DINH DƯỠNG</string>
    <string name="dentist">NHA SĨ</string>
    <string name="surgeon">BÁC SĨ PHẪU THUẬT</string>
    <string name="cardiologists">BÁC SĨ TIM MẠCH</string>
    <string name="LabTest">PHÒNG KIỂM TRA</string>
    <string name="BuyMedicine">MUA THUỐC</string>
    <string name="FindDoctors">TÌM BÁC SĨ</string>
    <string name="HealthArticles">BÀI VIẾT</string>
    <string name="OrderDetail">CHI TIẾT ĐƠN HÀNG</string>
    <string name="LogOut">ĐĂNG XUẤT</string>
    <string name="FullName">Tên đầy đủ</string>
    <string name="address">Địa chỉ</string>
    <string name="contactnumber">Số điện thoại liên lạc</string>
    <string name="fees">Phí</string>
    <string name="back_normal">Quay về</string>
    <string name="SelectDate">Chọn ngày</string>
    <string name="SelectTime">Chọn thời gian</string>
    <string name="BookAppointment">Đặt lịch</string>
    <string name="gotocart">TỚI GIỎ HÀNG</string>
    <string name="addtocart">XÁC NHẬN</string>
</resources>
